🐛 Fix: responsive image on small devices.

--- a/assets/base.css
+++ b/assets/base.css
@@ -5,10 +5,6 @@ h1 {
 h2 {
   font-size: clamp(100%, 0.8rem + 2vw, 1.5rem);
 }
-h3 {
-  font-size: clamp(100%, 0.6rem + 2vw, 1.5rem);
-  margin-bottom: 0.5rem;
-}
 strong {
   font-weight: bold;
 }
@@ -30,9 +26,6 @@ footer,
 @media screen and (min-width: 415px) {
   h1 {
     margin-bottom: 2rem;
-  }
-  h3 {
-    margin-bottom: 2.5rem;
   }
   img {
     margin-bottom: 3rem;
