--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,7 @@ h3 {
   font-family: var(--font-headings);
 }
 img {
-  width: 92%;
+  width: 100%;
   border-radius: 12px;
   margin-top: 1rem;
 }
@@ -53,7 +53,10 @@ img {
   grid-column: 1/4;
   color: var(--orange-color);
 }
-
+.ingredients__title {
+  font-size: clamp(100%, 0.6rem + 2vw, 1.5rem);
+  margin-bottom: 0.5rem;
+}
 .instructions {
   margin: 1rem 0 1.3rem 0;
   font-weight: 700;
@@ -154,6 +157,9 @@ img {
   border-radius: 10px;
   text-align: center;
 }
+.source {
+  word-break: break-all;
+}
 .source,
 .source a {
   color: var(--gray-color);
@@ -188,9 +194,6 @@ img {
 @media screen and (min-width: 375px) {
   .recipe__header p {
     width: 95%;
-  }
-  img {
-    width: 100%;
   }
   .checkbox__list,
   .instructions__list {
@@ -239,6 +242,9 @@ img {
   .recipe__aside ul > li:first-child,
   .recipe__aside ul > li:first-child .info p {
     grid-column: 1/2;
+  }
+  .ingredients__title {
+    margin-bottom: 2.5rem;
   }
   .details {
     padding: 1rem 0;
